--- a/src/pages/kontaktai.html
+++ b/src/pages/kontaktai.html
@@ -123,15 +123,16 @@
                   <div class="info-content">
                     <div class="contact">
                       <p class="contact-title">Įmonės kontaktai</p>
-                      <p>Tel. +370 37 333533</p>
-                      <p>info@acmegrupe.lt</p>
+                      <a href="tel:+370 37 333533" target="_blank">Mob.tel.: +370 37 333533</a>
+                      <a href="mailto:info@acmegrupe.lt" target="_blank">info@acmegrupe.lt</a>
+
                     </div>
   
                     <div class="contact">
                       <p class="contact-title">Kontaktai žiniasklaidai</p>
-                      <p>Simona.masalskiene@acme.lt</p>
+                      <a href="mailto:Simona.masalskiene@acme.lt" target="_blank">Simona.masalskiene@acme.lt</a>
                       <p>Komunikacijos vadovė</p>
-                      <p>Mob.tel.: +37066997776</p>
+                      <a href="tel:+37066997776" target="_blank">Mob.tel.: +37066997776</a>
                   </div>
                   </div>
               </div>
@@ -141,15 +142,19 @@
                 <p class="contact-2-title">Lietuvoje</p>
                 <div class="info-content-2">
                   <div class="contact">
-                    <p>„ACME Grupės“ pagrindinis biuras Kaune</p>
-                    <p>Raudondvario pl. 131B (3 a.)</p>
-                    <p>LT-47191 Kaunas</p>
+                    <a href="#">
+                      <p>„ACME Grupės“ pagrindinis biuras Kaune</p>
+                      <p>Raudondvario pl. 131B (3 a.)</p>
+                      <p>LT-47191 Kaunas</p>
+                    </a>
                   </div>
 
                   <div class="contact">
-                    <p>„ACME Grupės“​​​​​​​ biuras Vilniuje</p>
-                    <p>Goštauto g. 40C</p>
-                    <p>LT-01112 Vilnius</p>
+                    <a href="">
+                      <p>„ACME Grupės“​​​​​​​ biuras Vilniuje</p>
+                      <p>Goštauto g. 40C</p>
+                      <p>LT-01112 Vilnius</p>
+                    </a>
                 </div>
                 </div>
             </div>
@@ -158,21 +163,27 @@
                 <p class="contact-2-title">Estijoje</p>
                 <div class="info-content-2">
                   <div class="contact">
-                    <p>AVAD Baltic, OÜ</p>
-                    <p>AVALA, Electra House, 8 floor, Veskiposti 2,</p>
-                    <p>Tallinn, 10138</p>
+                    <a href="#">
+                      <p>AVAD Baltic, OÜ</p>
+                      <p>AVALA, Electra House, 8 floor, Veskiposti 2,</p>
+                      <p>Tallinn, 10138</p>
+                    </a>
                   </div>
 
                   <div class="contact">
-                    <p>ACC Distribution, OÜ</p>
-                    <p>Karjavälja 10</p>
-                    <p>Talinas, 12918</p>
+                    <a href="#">
+                      <p>ACC Distribution, OÜ</p>
+                      <p>Karjavälja 10</p>
+                      <p>Talinas, 12918</p>
+                    </a>
                 </div>
 
                 <div class="contact">
-                  <p>ACME Film, OÜ</p>
-                  <p>Sakala 16a-3,</p>
-                  <p>Talinas, 10141</p>
+                  <a href="#">
+                    <p>ACME Film, OÜ</p>
+                    <p>Sakala 16a-3,</p>
+                    <p>Talinas, 10141</p>
+                  </a>
               </div>
                 </div>
             </div>
@@ -181,20 +192,26 @@
                 <p class="contact-2-title">Latvijoje</p>
                 <div class="info-content-2">
                   <div class="contact">
-                    <p>AVAD Baltic, SIA</p>
-                    <p>Respublikas laukumas 2A, LV-1010, Riga</p>
+                    <a href="#">
+                      <p>AVAD Baltic, SIA</p>
+                      <p>Respublikas laukumas 2A, LV-1010, Riga</p>
+                    </a>
                   </div>
 
                   <div class="contact">
-                    <p>ACC Distribution, SIA</p>
-                    <p>Jūrkalnes 15/25-211,</p>
-                    <p>LV-1046, Ryga, Latvija</p>
+                    <a href="#">
+                      <p>ACC Distribution, SIA</p>
+                      <p>Jūrkalnes 15/25-211,</p>
+                      <p>LV-1046, Ryga, Latvija</p>
+                    </a>
                 </div>
 
                 <div class="contact">
-                  <p>ACME Film, SIA</p>
-                  <p>Liepājas 2-106</p>
-                  <p>LV-1002, Ryga, Latvija</p>
+                  <a href="#">
+                    <p>ACME Film, SIA</p>
+                    <p>Liepājas 2-106</p>
+                    <p>LV-1002, Ryga, Latvija</p>
+                  </a>
               </div>
                 </div>
             </div>
