--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -138,7 +138,8 @@
           <div class="mobile-shape-2"></div>
 
           <a href="pagrindines-veiklos.html" class="left next-page-link">
-            <img class="left-img" src="/images/activities-1.jpg" alt="">
+            <!-- <img class="left-media" src="/images/activities-1.jpg" alt=""> -->
+            <video class="left-media" src="/landing/bg-video.mp4" autoplay></video>
             <div class="content">
               <h2>Pagrindinės veiklos</h2>
               <svg width="51" height="51" viewBox="0 0 51 51" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -155,7 +156,7 @@
           </div>
     
           <a href="verslo-inovaciju-labaratorija.html" class="right next-page-link">
-            <img class="right-img" src="/images/activities-3.jpg" alt="">
+            <img class="right-media" src="/images/activities-3.jpg" alt="">
             <div class="content">
               <h2>Inovacijų labaratorija</h2>
               <svg width="51" height="51" viewBox="0 0 51 51" fill="none" xmlns="http://www.w3.org/2000/svg">
