--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -139,7 +139,8 @@
 
           <a href="pagrindines-veiklos.html" class="left next-page-link">
             <!-- <img class="left-media" src="/images/activities-1.jpg" alt=""> -->
-            <video class="left-media" src="/landing/bg-video.mp4" autoplay></video>
+            
+            <video class="left-media" src="/landing/bg-video.mp4" autoplay muted loop></video>
             <div class="content">
               <h2>Pagrindinės veiklos</h2>
               <svg width="51" height="51" viewBox="0 0 51 51" fill="none" xmlns="http://www.w3.org/2000/svg">
