--- a/src/pages/apie-mus.html
+++ b/src/pages/apie-mus.html
@@ -125,6 +125,7 @@
 
         <div class="video-section">
           <iframe class="video" src="https://www.youtube.com/embed/pDWUf_g2zsc?si=NmMJp98FmnFXGd48" allowfullscreen></iframe>
+          <div class="video-overlay"></div>
           <div class="video-play-icon"></div>
         </div>
 
