soc swiper update

--- a/src/pages/socialine-atsakomybe.html
+++ b/src/pages/socialine-atsakomybe.html
@@ -138,21 +138,21 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <img src="/tvarumas/brand-1.svg" alt="brand-1">
+              </div>
+              <div class="swiper-slide">
                 <img src="/tvarumas/brand-2.svg" alt="brand-2">
+              </div>
+              <div class="swiper-slide">
                 <img src="/tvarumas/brand-3.svg" alt="brand-3">
-                <img src="/tvarumas/brand-1.svg" alt="brand-3">
               </div>
               <div class="swiper-slide">
                 <img src="/tvarumas/brand-1.svg" alt="brand-1">
-                <img src="/tvarumas/brand-2.svg" alt="brand-2">
-                <img src="/tvarumas/brand-3.svg" alt="brand-3">
-                <img src="/tvarumas/brand-1.svg" alt="brand-1">
               </div>
               <div class="swiper-slide">
-                <img src="/tvarumas/brand-1.svg" alt="brand-1">
                 <img src="/tvarumas/brand-2.svg" alt="brand-2">
+              </div>
+              <div class="swiper-slide">
                 <img src="/tvarumas/brand-3.svg" alt="brand-3">
-                <img src="/tvarumas/brand-1.svg" alt="brand-1">
               </div>
             </div>
           </div>
