--- a/src/pages/apie-mus.html
+++ b/src/pages/apie-mus.html
@@ -123,11 +123,11 @@
             </div>
         </section>
 
-        <div class="video-section">
+        <section class="video-section">
           <iframe class="video" src="https://www.youtube.com/embed/pDWUf_g2zsc?si=NmMJp98FmnFXGd48" allowfullscreen></iframe>
           <div class="video-overlay"></div>
           <div class="video-play-icon"></div>
-        </div>
+        </section>
 
         <section class="timeline">
             <div class="dates"></div> <!-- Container for dates -->
@@ -326,6 +326,7 @@
     </main>
 
     <script type="module" src="/src/scripts/navigation.js"></script>
+    <script type="module" src="/src/scripts/scroll-animation.js"></script>
     <script type="module" src="/src/scripts/timeline.js"></script>
     <script type="module" src="/src/scripts/digits-animation.js"></script>
     <script type="module" src="/src/scripts/apie-mus-video.js"></script>
