--- a/src/pages/darbo-skelbimai.html
+++ b/src/pages/darbo-skelbimai.html
@@ -290,6 +290,7 @@
     </main>
 
     <script type="module" src="/src/scripts/navigation.js"></script>
+    <script type="module" src="/src/scripts/scroll-animation.js"></script>
     <script type="module" src="/src/scripts/darbo-skelbimai.js"></script>
     <script type="module">
       import gsap from "gsap";
