--- a/src/pages/pagrindines-veiklos.html
+++ b/src/pages/pagrindines-veiklos.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="/src/styles/footer.scss">
   </head>
   <body>
-  <body>
+  <body class="pagrindines-veiklos">
     <!-- Navigation -->
     <header>
       <a href="landing.html" class="logo next-page-link">
@@ -259,6 +259,23 @@
 
         tl.eventCallback("onComplete", () => {
           document.body.style.overflow = 'auto';
+        });
+      });
+
+      document.addEventListener("DOMContentLoaded", function() {
+        gsap.utils.toArray('.section-2 .content, .section-3 .content, .foto-2').forEach((content, index) => {
+          gsap.from(content, {
+            scrollTrigger: {
+            trigger: content,
+            start: 'top 85%',
+            end: 'bottom top',
+            toggleActions: 'play none none none',
+          },
+            opacity: 0,
+            y: 50,
+            duration: 1,
+            ease: "power3.out"
+          });
         });
       });
 
