--- a/src/pages/mentoryste.html
+++ b/src/pages/mentoryste.html
@@ -215,6 +215,7 @@
     </main>
 
     <script type="module" src="/src/scripts/navigation.js"></script>
+    <script type="module" src="/src/scripts/scroll-animation.js"></script>
     <script type="module" src="/src/scripts/animated-words.js"></script>
     <script type="module">
       import gsap from "gsap";
