--- a/src/pages/socialine-atsakomybe.html
+++ b/src/pages/socialine-atsakomybe.html
@@ -559,6 +559,7 @@
     </main>
 
     <script type="module" src="/src/scripts/navigation.js"></script>
+    <script type="module" src="/src/scripts/scroll-animation.js"></script>
     <script type="module" src="/src/scripts/soc-swiper.js"></script>
     <script type="module" src="/src/scripts/gallery-soc.js"></script>
     <script type="module" src="/src/scripts/header-collider-blue.js"></script>
