--- a/src/pages/socialine-atsakomybe.html
+++ b/src/pages/socialine-atsakomybe.html
@@ -320,7 +320,7 @@
 
     </div>
 
-    <section class="tech-education">
+    <div class="tech-education">
     
       <img class="tech-shape" src="/images/activities-2.jpg" alt="activities-2" >
 
@@ -477,7 +477,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
     <section class="ataskaitos">
       <h3>Ataskaitos</h3>
@@ -559,6 +559,7 @@
     </main>
 
     <script type="module" src="/src/scripts/navigation.js"></script>
+    <script type="module" src="/src/scripts/scroll-animation.js"></script>
     <script type="module" src="/src/scripts/soc-swiper.js"></script>
     <script type="module" src="/src/scripts/gallery-soc.js"></script>
     <script type="module" src="/src/scripts/header-collider-blue.js"></script>
