karjera mobile done

--- a/src/pages/karjera.html
+++ b/src/pages/karjera.html
@@ -350,8 +350,6 @@
 
 
       <div class="acme-human">
-     
-
         <div class="content">
             <img class="acme-shape" src="/images/activities-1.jpg" alt="activities-1" >
             <h2>Acme žmogus</h2>
@@ -401,6 +399,10 @@
               <p>Nuotolinis pokalbis su atrankos specialistus</p>
             </div>
             <div class="step">
+              <div class="number">2</div>
+              <p>Nuotolinis pokalbis su atrankos specialistus</p>
+            </div>
+            <div class="step">
               <div class="number">3</div>
               <p>Nuotolinis pokalbis su atrankos specialistus</p>
             </div>
@@ -408,14 +410,10 @@
               <div class="number">4</div>
               <p>Nuotolinis pokalbis su atrankos specialistus</p>
             </div>
-            <div class="step">
-              <div class="number">5</div>
-              <p>Nuotolinis pokalbis su atrankos specialistus</p>
-            </div>
           </div>
         </div>
 
-        <div class="content">
+        <div class="content recomendation">
           <img class="acme-shape" src="/images/activities-2.jpg" alt="activities-2" >
           <h2>Rekomendacija</h2>
           <p>Morem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. </p>
@@ -423,7 +421,7 @@
           <p>Morem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. </p>
       </div>
 
-      <div class="content">
+      <div class="content recomendation">
         <img class="acme-shape" src="/images/activities-3.jpg" alt="activities-3" >
         <h2>Rekomendacija</h2>
         <p>Morem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. </p>
