--- a/src/pages/mentoryste.html
+++ b/src/pages/mentoryste.html
@@ -115,6 +115,7 @@
 
             <div class="content">
               <h1>Mentoryste</h1>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum facere maxime quae reiciendis amet officia ab reprehenderit vitae labore at quidem porro repellat voluptatem, accusamus inventore provident expedita quam ullam!</p>
             </div>
 
             <div class="content-2">
