--- a/src/pages/partneriu-interviu.html
+++ b/src/pages/partneriu-interviu.html
@@ -114,7 +114,9 @@
                 <path d="M-18.4497 -136.14L-72.4697 736.67C63.3003 726.88 221.23 717.08 357 707.29C438.01 701.45 511.73 734.62 561.27 789.89C613.5 786.66 887.12 770.6 939.35 767.37C1048.31 760.62 1135.94 687.15 1143.79 578.26C1162.66 316.69 1191.53 55.1201 1210.4 -206.45C885.46 -183.02 306.5 -159.58 -18.4497 -136.14Z" fill="#15276A"/>
                 </svg>
                 
+                <div class="partneriu-interviu-mobile collidable"></div>
             </div>
+
             <div class="content">
               <h1>Partneriu interviu</h1>
               <p>Mes nesiekiame subjektyviai komentuoti tech pasaulio pokyčių, bet jungiame Baltijos šalis su pasauliniu matymu ir tarptautiniais ekspertais.</p>
