soc atsakomybe mobile

--- a/src/pages/socialine-atsakomybe.html
+++ b/src/pages/socialine-atsakomybe.html
@@ -118,16 +118,17 @@
             <div class="content">
                 <h1>Socialine atsakomybe</h1>
                 <p>„ACME Grupė“ nuo 2016 m. aktyviai plėtoja socialinės atsakomybės strategiją. Organizacijos vadovai ir darbuotojai aiškiai suvokia, kad korporatyvinė socialinė atsakomybė ir tvarumas yra kertiniai elementai, plėtojant sėkmingą, tvarų ir visuomenei pridėtinę vertę kuriantį verslą.</p>
-                <p>„ACME Grupės“ socialinės atsakomybės ašis – paremta darbuotojų įtraukimu į šią veiklą. Socialinė atsakomybė suteikia jiems galimybę pasinaudoti turimais įmonės ištekliais, kad drauge su visa organizacija prisidėtų prie visuomenės gerovės kūrimo.</p>
+              <p>„ACME Grupės“ socialinės atsakomybės ašis – paremta darbuotojų įtraukimu į šią veiklą. Socialinė atsakomybė suteikia jiems galimybę pasinaudoti turimais įmonės ištekliais, kad drauge su visa organizacija prisidėtų prie visuomenės gerovės kūrimo.</p>
             </div>
 
-            <div class="socialine-atsakomybe-shape">
+            <div class="shape-1">
               <svg width="100%" height="100%" viewBox="0 0 1728 1949" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1859.88 -518C1297 -477.379 734.119 -436.769 171.238 -396.148L84.1384 1011.73C83.9921 1014.13 83.8876 1016.53 83.8145 1018.92C160.976 1013.35 238.138 1007.79 315.3 1002.22C443.791 992.946 550.62 1099.81 541.351 1228.34C540.943 1234.02 540.536 1239.69 540.118 1245.38C939.438 1220.65 1338.75 1195.91 1738.07 1171.18C1778.68 608.125 1819.27 45.0676 1859.88 -517.99V-518Z" fill="#B4D7F6"/>
                 <path  class="collidable" d="M83.8037 1018.91C-158.602 1036.4 -400.996 1053.9 -643.402 1071.39L-717 1949C-360.9 1926.94 -4.79016 1904.89 351.31 1882.83C420.529 1878.55 475.903 1823.71 480.898 1754.52C500.638 1480.8 520.378 1519.08 540.118 1245.37C470.302 1249.7 400.487 1254.01 330.682 1258.34C193.506 1266.84 79.4984 1155.29 83.8141 1018.91H83.8037Z" fill="#15276A"/>
                 <path d="M315.289 1002.21C238.127 1007.78 160.965 1013.34 83.8037 1018.91C79.4879 1155.29 193.496 1266.83 330.671 1258.34C400.487 1254.01 470.302 1249.7 540.107 1245.37C540.515 1239.69 540.922 1234.02 541.34 1228.33C550.609 1099.8 443.78 992.935 315.289 1002.21Z" fill="#307FEA"/>
                 </svg>
                 
+                <div class="socialine-atsakomybe-mobile"></div>
             </div>
     </section>
 
@@ -238,23 +239,32 @@
 
         <div class="content-bottom">
             <div class="white-icon icon">
-              <img src="/tvarumas/info-check-white.svg" alt="white">
+              <svg width="64" height="63" viewBox="0 0 64 63" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g id="Acme_ikona_saugumas_tamsi mėlyna" clip-path="url(#clip0_345_3112)">
+                <path id="Vector" d="M9.00325 26.9996C8.299 27.6865 8.299 28.8071 9.00325 29.5001L21.4099 41.2947C23.4823 43.3312 26.1969 44.3479 28.9146 44.3479C31.6324 44.3479 34.3532 43.3281 36.4194 41.2947L50.9078 27.0362V31.732C50.9078 44.6502 41.5881 56.0295 27.5372 62.5451C26.2186 63.1557 24.6829 63.1557 23.3644 62.5451C9.3228 56.0295 0 44.6502 0 31.732V3.25472C0 1.45944 1.48296 0 3.30719 0H47.6037C49.431 0 50.9109 1.45944 50.9109 3.25472V15.3149L30.469 35.4325C29.6127 36.2752 28.2228 36.2752 27.3727 35.4325L14.963 23.6319C14.2588 22.9449 13.1264 22.9449 12.4221 23.6319L9.00635 26.9965L9.00325 26.9996Z" fill="#E7ECFF"/>
+                <path id="Vector_2" d="M63.4757 14.6676L50.9077 27.0361V15.3148L57.519 8.80844C58.217 8.12147 59.3556 8.12147 60.0599 8.80844L63.4757 12.17C64.1737 12.8631 64.1737 13.9806 63.4757 14.6706V14.6676Z" fill="#E7ECFF"/>
+                </g>
+                <defs>
+                <clipPath id="clip0_345_3112">
+                <rect width="64" height="63" fill="white"/>
+                </clipPath>
+                </defs>
+              </svg>
+                
               <p>Informacijos punktas</p>
             </div>
 
-            <div class="blue-icons">
-              <div class="icon">
-                  <img src="/tvarumas/Acme_ikona_rodyklė_tamsi_mėlyna.svg" alt="">
-                  <p>Informacijos punktas</p>
-              </div>
-              <div class="icon">
-                  <img src="/tvarumas/Acme_ikona_saugumas_tamsi_mėlyna.svg" alt="">
-                  <p>Informacijos punktas</p>
-              </div>
-              <div class="icon">
-                  <img src="/tvarumas/Acme_ikona_spyna_tamsi_mėlyna.svg" alt="">
-                  <p>Informacijos punktas</p>
-              </div>
+            <div class="blue-icon icon">
+              <img src="/tvarumas/Acme_ikona_rodyklė_tamsi_mėlyna.svg" alt="">
+              <p>Informacijos punktas</p>
+          </div>
+          <div class="blue-icon icon">
+              <img src="/tvarumas/Acme_ikona_saugumas_tamsi_mėlyna.svg" alt="">
+              <p>Informacijos punktas</p>
+          </div>
+          <div class="blue-icon icon">
+              <img src="/tvarumas/Acme_ikona_spyna_tamsi_mėlyna.svg" alt="">
+              <p>Informacijos punktas</p>
           </div>
         </div>
     </section>
