veiklos ir verslo update

--- a/src/pages/pagrindines-veiklos.html
+++ b/src/pages/pagrindines-veiklos.html
@@ -117,7 +117,7 @@
                 <path d="M788.27 601.14C798.23 600.52 808.18 599.91 818.14 599.29C900.09 594.22 965.949 530.44 974.089 449.2C965.419 449.7 956.829 450.21 948.339 450.71C865.209 455.64 798.19 519.43 788.27 601.14Z" fill="#00917D"/>
                 </svg>
             </div>
-            <div class="veiklos-mobile-shape"></div>
+            <div class="mobile-shape"></div>
             <img class="shape-2" src="/images/activities-1.jpg" alt="">
 
             <h1>Pagrindines vieklos</h1>
