--- a/src/pages/verslo-inovaciju-labaratorija.html
+++ b/src/pages/verslo-inovaciju-labaratorija.html
@@ -115,11 +115,11 @@
             <path d="M787.95 601.16C788.06 601.16 788.16 601.15 788.27 601.14C798.19 519.43 865.21 455.64 948.34 450.71C956.83 450.21 965.42 449.7 974.09 449.2C974.25 447.64 974.39 446.08 974.5 444.51C998.45 112.52 1022.4 -219.47 1046.35 -551.46C665.78 -524.01 285.2 -496.55 -95.37 -469.1L-165.25 660.18C103.92 643.51 373.09 626.85 642.25 610.18L787.96 601.11V601.16H787.95Z" fill="#B4D7F6"/>
             <path d="M788.27 601.14C798.23 600.52 808.18 599.91 818.14 599.29C900.09 594.22 965.949 530.44 974.089 449.2C965.419 449.7 956.829 450.21 948.339 450.71C865.209 455.64 798.19 519.43 788.27 601.14Z" fill="#307FEA"/>
             </svg>
-            
         </div>
+        <div class="mobile-shape collidable"></div>
         <img class="shape-2" src="/images/activities-1.jpg" alt="">
 
-        <h1>Pagrindines vieklos</h1>
+        <h1>Verslo inovaciju labaratorija</h1>
         <div class="content">
             <h2>ACC Distribution</h2>
 
@@ -147,10 +147,10 @@
             <p>Bendrovė platina bei kuria lietuvišką kiną: repertuare tokie filmai, kaip „Tarp pilkų debesų“, „Tadas Blinda: pradžia“, „Valentinas vienas“, „Emilija iš Laisvės alėjos“, „Ir visi jų vyrai“, „Importinis jaunikis“ ir kt.</p>
 
             <div class="brands">
-                <img src="/tvarumas/brand-1.svg" alt="brand-1">
-                <img src="/tvarumas/brand-2.svg" alt="brand-2">
-                <img src="/tvarumas/brand-3.svg" alt="brand-3">
-            </div>
+              <img src="/tvarumas/brand-1.svg" alt="brand-1">
+              <img src="/tvarumas/brand-2.svg" alt="brand-2">
+              <img src="/tvarumas/brand-3.svg" alt="brand-3">
+          </div>
 
             <a href="#" class="button">Daugiau informacijos</a>
         </div>
