--- a/src/pages/karjera.html
+++ b/src/pages/karjera.html
@@ -413,20 +413,11 @@
           </div>
         </div>
 
-        <div class="content recomendation">
-          <img class="acme-shape" src="/images/activities-2.jpg" alt="activities-2" >
-          <h2>Rekomendacija</h2>
-          <p>Morem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. </p>
-          <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-          <p>Morem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. </p>
-      </div>
-
       <div class="content recomendation">
         <img class="acme-shape" src="/images/activities-3.jpg" alt="activities-3" >
-        <h2>Rekomendacija</h2>
-        <p>Morem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. </p>
-        <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-        <p>Morem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. </p>
+        <h2>Kodėl „Acme grupė“?</h2>
+        <p>Edvinas Urbonavičius: „Didžiausią įspūdį kelia vidinė bendravimo kultūra - būtent dėl šios priežasties rekomenduoju „Acme grupę“. Per savo karjeros metus patyriau daug nuotykių, o bendravimas su kolegomis skatina darbe jaustis kaip namuose ar draugų būryje.“</p>
+        <p>Čia galiu dalintis mintimis ir nebijoti būti sukritikuotu, niekas neskaičiuoja tavo praleistų minučių už ekrano, bet visi vertina rezultatą, pastangas ir norą padaryti daugiau.</p>
     </div>
       </div>
 
