--- a/src/pages/pagrindines-veiklos.html
+++ b/src/pages/pagrindines-veiklos.html
@@ -120,7 +120,7 @@
             <div class="mobile-shape"></div>
             <img class="shape-2" src="/images/activities-1.jpg" alt="">
 
-            <h1>Pagrindines vieklos</h1>
+            <h1>Pagrindines veiklos</h1>
             <div class="content">
                 <h2>ACC Distribution</h2>
 
