--- a/src/pages/verslo-inovaciju-labaratorija.html
+++ b/src/pages/verslo-inovaciju-labaratorija.html
@@ -177,6 +177,21 @@
           <a href="#" class="button">Daugiau informacijos</a>
       </div>
   </section>
+
+  <section class="acme-nt">
+      <div class="nt">
+          <h2>ACME NT</h2>
+          <p>Nekilnojamojo turto valdymu ir administravimu, naujais nekilnojamo turto projektais užsiimanti bendrovė, valdoma „ACME Grupės“.</p>
+      </div>
+      <div class="nt">
+          <h2>ACME NT</h2>
+          <p>Nekilnojamojo turto valdymu ir administravimu, naujais nekilnojamo turto projektais užsiimanti bendrovė, valdoma „ACME Grupės“.</p>
+      </div>
+      <div class="nt">
+          <h2>ACME NT</h2>
+          <p>Nekilnojamojo turto valdymu ir administravimu, naujais nekilnojamo turto projektais užsiimanti bendrovė, valdoma „ACME Grupės“.</p>
+      </div>
+  </section>
  
     
   <footer>
