--- a/src/pages/socialine-atsakomybe.html
+++ b/src/pages/socialine-atsakomybe.html
@@ -519,17 +519,26 @@
     <section class="ataskaitos">
       <h3>Ataskaitos</h3>
       <div class="content">
-        <h4>Geri darbai 2020</h3>
+        <h4>Geri darbai 2021</h3>
           <a class="icon" href="/tvarumas/bend-arrow.svg" download>
             <img src="/tvarumas/bend-arrow.svg" alt="bend-arrow">
           </a>
       </div>
       <div class="content">
-        <h4>Geri darbai 2020</h3>
+        <h4>Geri darbai 2022</h3>
           <a class="icon" href="/tvarumas/bend-arrow.svg" download>
             <img src="/tvarumas/bend-arrow.svg" alt="bend-arrow">
           </a>
       </div>
+      </div>
+      <div class="content">
+        <h4>Geri darbai 2023</h3>
+          <a class="icon" href="/tvarumas/bend-arrow.svg" download>
+            <img src="/tvarumas/bend-arrow.svg" alt="bend-arrow">
+          </a>
+      </div>
+
+      <a class="more" href="#">Visos ataskaitos</a>
     </section>
 
     <footer>
