--- a/src/pages/tvarumas.html
+++ b/src/pages/tvarumas.html
@@ -137,26 +137,11 @@
                 <div class="tab-content">
                     <p>Morem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
                     <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-                    <div class="icons">
-                        <div class="icon">
-                            <img src="/tvarumas/Acme_ikona_rodyklė_tamsi_mėlyna.svg" alt="">
-                            <p>Informacijos punktas</p>
-                        </div>
-                        <div class="icon">
-                            <img src="/tvarumas/Acme_ikona_saugumas_tamsi_mėlyna.svg" alt="">
-                            <p>Informacijos punktas</p>
-                        </div>
-                        <div class="icon">
-                            <img src="/tvarumas/Acme_ikona_spyna_tamsi_mėlyna.svg" alt="">
-                            <p>Informacijos punktas</p>
-                        </div>
-                    </div>
-
+                  
                     <div class="tab-columns">
                         <div class="column">
                           <div class="icon">
                             <img src="/tvarumas/Acme_ikona_rodyklė_tamsi_mėlyna.svg" alt="">
-                            <p>Informacijos punktas</p>
                           </div>
                           <h3>Klimato kaita: švelninimas.</h3>
                           <p>ACME Grupės bendrovės integruoja veiksmus, skirtus reguliariai vertinti bendrovių prisidėjimo prie klimato kaitos mastą tiesiogiai, netiesiogiai ir per tiekimo/vertės grandines (I, II ir III vertinimo srities, kaip tai nustato GHG Protocol, šiltnamio efektą sukeliančių dujų (ŠESD) skaičiavimais). </p>
@@ -167,19 +152,49 @@
                         <div class="column">
                           <div class="icon">
                             <img src="/tvarumas/Acme_ikona_rodyklė_tamsi_mėlyna.svg" alt="">
-                            <p>Informacijos punktas</p>
                           </div>
-                          <h3>Klimato kaita: švelninimas.</h3>
+                          <h3>Žiedinė ekonomika.</h3>
                           <p>ACME Grupės bendrovės integruoja veiksmus, skirtus reguliariai vertinti bendrovių prisidėjimo prie klimato kaitos mastą tiesiogiai, netiesiogiai ir per tiekimo/vertės grandines (I, II ir III vertinimo srities, kaip tai nustato GHG Protocol, šiltnamio efektą sukeliančių dujų (ŠESD) skaičiavimais). </p>
                           <p>ACME Grupės bendrovės integruoja veiksmus, skirtus reguliariai vertinti bendrovių prisidėjimo prie klimato kaitos mastą tiesiogiai, netiesiogiai ir per tiekimo/vertės grandines (I, II ir III vertinimo srities, kaip tai nustato GHG Protocol, šiltnamio efektą sukeliančių dujų (ŠESD) skaičiavimais). </p>
                         </div>
-                        
+
                         <div class="column">
                           <div class="icon">
                             <img src="/tvarumas/Acme_ikona_rodyklė_tamsi_mėlyna.svg" alt="">
-                            <p>Informacijos punktas</p>
                           </div>
-                          <h3>Klimato kaita: švelninimas.</h3>
+                          <h3>Atliekų tvarkymas.</h3>
+                          <p>ACME Grupės bendrovės integruoja veiksmus, skirtus reguliariai vertinti bendrovių prisidėjimo prie klimato kaitos mastą tiesiogiai, netiesiogiai ir per tiekimo/vertės grandines (I, II ir III vertinimo srities, kaip tai nustato GHG Protocol, šiltnamio efektą sukeliančių dujų (ŠESD) skaičiavimais). </p>
+                        </div>
+
+                        <div class="column">
+                          <div class="icon">
+                            <img src="/tvarumas/Acme_ikona_rodyklė_tamsi_mėlyna.svg" alt="">
+                          </div>
+                          <h3>Tiekimo grandinė.</h3>
+                          <p>ACME Grupės bendrovės integruoja veiksmus, skirtus reguliariai vertinti bendrovių prisidėjimo prie klimato kaitos mastą tiesiogiai, netiesiogiai ir per tiekimo/vertės grandines (I, II ir III vertinimo srities, kaip tai nustato GHG Protocol, šiltnamio efektą sukeliančių dujų (ŠESD) skaičiavimais). </p>
+                        </div>
+
+                        <div class="column">
+                          <div class="icon">
+                            <img src="/tvarumas/Acme_ikona_rodyklė_tamsi_mėlyna.svg" alt="">
+                          </div>
+                          <h3>Transportas</h3>
+                          <p>ACME Grupės bendrovės integruoja veiksmus, skirtus reguliariai vertinti bendrovių prisidėjimo prie klimato kaitos mastą tiesiogiai, netiesiogiai ir per tiekimo/vertės grandines (I, II ir III vertinimo srities, kaip tai nustato GHG Protocol, šiltnamio efektą sukeliančių dujų (ŠESD) skaičiavimais). </p>
+                        </div>
+
+                        <div class="column">
+                          <div class="icon">
+                            <img src="/tvarumas/Acme_ikona_rodyklė_tamsi_mėlyna.svg" alt="">
+                          </div>
+                          <h3>Bioįvairovė</h3>
+                          <p>ACME Grupės bendrovės integruoja veiksmus, skirtus reguliariai vertinti bendrovių prisidėjimo prie klimato kaitos mastą tiesiogiai, netiesiogiai ir per tiekimo/vertės grandines (I, II ir III vertinimo srities, kaip tai nustato GHG Protocol, šiltnamio efektą sukeliančių dujų (ŠESD) skaičiavimais). </p>
+                        </div>
+
+                        <div class="column">
+                          <div class="icon">
+                            <img src="/tvarumas/Acme_ikona_rodyklė_tamsi_mėlyna.svg" alt="">
+                          </div>
+                          <h3>Žaliosios energetikos plėtros įgalinimas.</h3>
                           <p>ACME Grupės bendrovės integruoja veiksmus, skirtus reguliariai vertinti bendrovių prisidėjimo prie klimato kaitos mastą tiesiogiai, netiesiogiai ir per tiekimo/vertės grandines (I, II ir III vertinimo srities, kaip tai nustato GHG Protocol, šiltnamio efektą sukeliančių dujų (ŠESD) skaičiavimais). </p>
                         </div>
                     </div>
