--- a/src/pages/partneriu-interviu.html
+++ b/src/pages/partneriu-interviu.html
@@ -131,7 +131,7 @@
                   <img  src="/images/activities-1.jpg" alt="">
                 </div>
                 <div class="article-content">
-                  <a class="article-category" href="#">Partneriu interiu</a>
+                  <a class="article-category more" href="#">Partneriu interiu</a>
                   <h3>„ACME Grupė“ plėtodama socialiai atsakingą veiklą įsteigė viešąją įstaigą „ACME Geri darbai“</h3>
                   <a class="button-outline next-page-link" href="naujienos-vidus.html">
                     <span>Skaityti</span>
@@ -147,7 +147,7 @@
               <article>
                 <img class="article-image" src="/images/activities-1.jpg" alt="">
                 <div class="article-content">
-                  <a class="article-category" href="#">Partneriu interiu</a>
+                  <a class="article-category more" href="#">Partneriu interiu</a>
                   <h3>„ACME Grupė“ plėtodama socialiai atsakingą veiklą įsteigė viešąją įstaigą „ACME Geri darbai“</h3>
                   <a class="button-outline next-page-link" href="naujienos-vidus.html">
                     <span>Skaityti</span>
@@ -163,7 +163,7 @@
               <article>
                 <img class="article-image" src="/images/activities-1.jpg" alt="">
                 <div class="article-content">
-                  <a class="article-category" href="#">Partneriu interiu</a>
+                  <a class="article-category more" href="#">Partneriu interiu</a>
                   <h3>„ACME Grupė“ plėtodama socialiai atsakingą veiklą įsteigė viešąją įstaigą „ACME Geri darbai“</h3>
                   <a class="button-outline next-page-link" href="naujienos-vidus.html">
                     <span>Skaityti</span>
