--- a/src/pages/socialine-atsakomybe.html
+++ b/src/pages/socialine-atsakomybe.html
@@ -572,7 +572,9 @@
           </a>
       </div>
 
-      <a class="more" href="#">Visos ataskaitos</a>
+      <center>
+        <a class="more" href="#">Visos ataskaitos</a>
+      </center>
     </section>
 
     <footer>
