more and category animation

--- a/src/pages/naujienos-vidus.html
+++ b/src/pages/naujienos-vidus.html
@@ -125,7 +125,7 @@
                 <span>Grįžti</span>
             </a>
   
-            <a class="category" href="#">Partneriu interviu</a>
+            <a class="category more" href="#">Partneriu interviu</a>
           
             <h2 class="title">„ACME Grupė“ plėtodama socialiai atsakingą veiklą įsteigė viešąją įstaigą „ACME Geri darbai“</h2>
             <p class="intro">„ACME Grupės“ bendrovės drauge su keliais šimtais darbuotojų bei su 6 socialiniais partneriais jau septintus metus iš eilės surengė paramos renginį „Gerų darbų mugė“, kurio metu surinkta per 106 tūkst. Eur. Paaukotos lėšos bus skirtos jautriausioms visuomenės grupėms ir socialinėms problemoms spręsti.
