--- a/src/pages/naujienos.html
+++ b/src/pages/naujienos.html
@@ -126,7 +126,7 @@
               <article>
                 <img class="article-image" src="/images/activities-1.jpg" alt="">
                 <div class="article-content">
-                  <a class="article-category" href="#">Partneriu interiu</a>
+                  <a class="article-category more" href="#">Partneriu interiu</a>
                   <h3>„ACME Grupė“ plėtodama socialiai atsakingą veiklą įsteigė viešąją įstaigą „ACME Geri darbai“</h3>
                   <a class="button-outline next-page-link" href="naujienos-vidus.html">
                     <span>Skaityti</span>
@@ -142,7 +142,7 @@
               <article>
                 <img class="article-image" src="/images/activities-1.jpg" alt="">
                 <div class="article-content">
-                  <a class="article-category" href="#">Partneriu interiu</a>
+                  <a class="article-category more" href="#">Partneriu interiu</a>
                   <h3>„ACME Grupė“ plėtodama socialiai atsakingą veiklą įsteigė viešąją įstaigą „ACME Geri darbai“</h3>
                   <a class="button-outline next-page-link" href="naujienos-vidus.html">
                     <span>Skaityti</span>
@@ -158,7 +158,7 @@
               <article>
                 <img class="article-image" src="/images/activities-1.jpg" alt="">
                 <div class="article-content">
-                  <a class="article-category" href="#">Partneriu interiu</a>
+                  <a class="article-category more" href="#">Partneriu interiu</a>
                   <h3>„ACME Grupė“ plėtodama socialiai atsakingą veiklą įsteigė viešąją įstaigą „ACME Geri darbai“</h3>
                   <a class="button-outline next-page-link" href="naujienos-vidus.html">
                     <span>Skaityti</span>
@@ -174,7 +174,7 @@
               <article>
                 <img class="article-image" src="/images/activities-1.jpg" alt="">
                 <div class="article-content">
-                  <a class="article-category" href="#">Partneriu interiu</a>
+                  <a class="article-category more" href="#">Partneriu interiu</a>
                   <h3>„ACME Grupė“ plėtodama socialiai atsakingą veiklą įsteigė viešąją įstaigą „ACME Geri darbai“</h3>
                   <a class="button-outline next-page-link" href="naujienos-vidus.html">
                     <span>Skaityti</span>
